--- a/kmitl-eeweb-frontend/public/index.html
+++ b/kmitl-eeweb-frontend/public/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <html lang="en">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel="icon" type="image/png" href="http://russberry.trueddns.com:39870/Bear.png"/>
+  <title>EE KMITL</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <!--<link href="/static/assets/img/favicon.9d9b95259c3b.png" rel="icon">-->
+  <link href="http://russberry.trueddns.com:39870/Bear.png" rel="apple-touch-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/bootstrap/css/bootstrap.min.d432e4222814.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/icofont/icofont.min.134b8dae50ca.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/boxicons/css/boxicons.min.a0e66e2b913f.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/remixicon/remixicon.5a27e286180e.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/venobox/venobox.a4f15edaa0fa.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/owl.carousel/assets/owl.carousel.min.761bea69e4eb.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/vendor/aos/aos.847da8fca806.css' rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/css/test_style.26ac9d1731ec.css' rel="stylesheet">
+  <link href='https://kmitl-eeweb.herokuapp.com/static/assets/js/main.3d4dbcf08b0a.js' rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: OnePage - v2.2.2
+  * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
