--- a/kmitl-eeweb-frontend/public/index.html
+++ b/kmitl-eeweb-frontend/public/index.html
@@ -41,6 +41,7 @@
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">ghghjtyjtyjtj</div>
+    <div id="root"></div>
+    <h1>ergergerg</h1>
   </body>
 </html>
